fix floating-heart no visible after scrolling
scrolling down and clicking the heart did not show the floating heart
which starts at the initial body height.

--- a/src/main/css/components/feedback-heart.css
+++ b/src/main/css/components/feedback-heart.css
@@ -4,7 +4,7 @@
 @layer components {
   .feedback-floating-heart {
     background-color: red;
-    position: absolute;
+    position: fixed;
     height: 32px;
     min-height: 16px;
     width: 32px;
